--- a/about/index.html
+++ b/about/index.html
@@ -16,7 +16,7 @@
         "description" : "My name is Yuqing Liu, you can call me Alice.
 I love coding and all beautiful things, and I&rsquo;m currently trying to conbine these two and create fancinating works.
 Sometimes I&rsquo;ll observe people, wondering what actually interests them.
- BC Digital Media Arts at CUC 2014.9 - 2018.6 Intern at AALab  2018.8 ~ knowing some Unity &amp; Processing.  ",
+ BC Digital Media Arts at CUC 2014.9 - 2018.6 Intern at AALab  2018.8 ~ 2019.4 knowing some Unity &amp; Processing.  ",
         "inLanguage" : "en",
         "author" : "",
         "creator" : "",
@@ -27,7 +27,7 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
         "datePublished": "2019-03-20 15:32:00 &#43;0800 CST",
         "dateModified" : "2019-03-20 15:32:00 &#43;0800 CST",
         "url" : "https://aliceleon.info/about/",
-        "wordCount" : "57",
+        "wordCount" : "58",
         "image" : https://aliceleon.info/%!s(&lt;nil&gt;)",
         "keywords" : [ "Blog" ]   
     }
@@ -48,9 +48,9 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-<link href="https://aliceleon.info/css/style.css?v=1553330056" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/style.css?v=1555375200" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
 
-<link href="https://aliceleon.info/css/custom.css?v=1553330056" rel="stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/custom.css?v=1555375200" rel="stylesheet" type='text/css' media='all'>
 <link rel="shortcut icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 
@@ -233,7 +233,7 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
 
 <ul>
 <li>BC Digital Media Arts at CUC 2014.9 - 2018.6</li>
-<li>Intern at <a href="https://github.com/aalab-cn">AALab </a>  2018.8 ~</li>
+<li>Intern at <a href="https://github.com/aalab-cn">AALab </a>  2018.8 ~ 2019.4</li>
 <li>knowing some Unity &amp; Processing.</li>
 </ul>
 
@@ -361,7 +361,7 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
   </div>
   <script src="https://aliceleon.info/js/jquery.min.js"></script>
 <script src="https://aliceleon.info/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.info/js/production.min.js?v=1553330056"></script>
+<script src="https://aliceleon.info/js/production.min.js?v=1555375200"></script>
 
 </body>
 </html>
