--- a/about/index.html
+++ b/about/index.html
@@ -24,8 +24,8 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
         "accountablePerson" : "",
         "copyrightHolder" : "",
         "copyrightYear" : "2019",
-        "datePublished": "2019-03-20 15:32:00 &#43;0800 CST",
-        "dateModified" : "2019-03-20 15:32:00 &#43;0800 CST",
+        "datePublished": "2019-03-20 15:32:00 &#43;0800 &#43;0800",
+        "dateModified" : "2019-03-20 15:32:00 &#43;0800 &#43;0800",
         "url" : "https://aliceleon.info/about/",
         "wordCount" : "58",
         "image" : https://aliceleon.info/%!s(&lt;nil&gt;)",
@@ -48,9 +48,9 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-<link href="https://aliceleon.info/css/style.css?v=1555375200" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/style.css?v=1570527414" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
 
-<link href="https://aliceleon.info/css/custom.css?v=1555375200" rel="stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/custom.css?v=1570527414" rel="stylesheet" type='text/css' media='all'>
 <link rel="shortcut icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 
@@ -361,7 +361,7 @@ Sometimes I&rsquo;ll observe people, wondering what actually interests them.
   </div>
   <script src="https://aliceleon.info/js/jquery.min.js"></script>
 <script src="https://aliceleon.info/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.info/js/production.min.js?v=1555375200"></script>
+<script src="https://aliceleon.info/js/production.min.js?v=1570527414"></script>
 
 </body>
 </html>
