--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
         "accountablePerson" : "",
         "copyrightHolder" : "",
         "copyrightYear" : "2018",
-        "datePublished": "2018-05-06 18:25:22 &#43;0800 CST",
-        "dateModified" : "2018-05-06 18:25:22 &#43;0800 CST",
+        "datePublished": "2018-05-06 18:25:22 &#43;0800 &#43;0800",
+        "dateModified" : "2018-05-06 18:25:22 &#43;0800 &#43;0800",
         "url" : "https://aliceleon.info/",
         "wordCount" : "0",
         "image" : https://aliceleon.info/%!s(&lt;nil&gt;)",
@@ -46,9 +46,9 @@
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 
-<link href="https://aliceleon.info/css/style.css?v=1555375200" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/style.css?v=1570527414" rel="stylesheet" id="theme-stylesheet" type='text/css' media='all'>
 
-<link href="https://aliceleon.info/css/custom.css?v=1555375200" rel="stylesheet" type='text/css' media='all'>
+<link href="https://aliceleon.info/css/custom.css?v=1570527414" rel="stylesheet" type='text/css' media='all'>
 <link rel="shortcut icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://aliceleon.info/img/favicon.ico" type="image/x-icon">
 
@@ -534,7 +534,7 @@
   </div>
   <script src="https://aliceleon.info/js/jquery.min.js"></script>
 <script src="https://aliceleon.info/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.info/js/production.min.js?v=1555375200"></script>
+<script src="https://aliceleon.info/js/production.min.js?v=1570527414"></script>
 
 </body>
 </html>
