--- a/contact/index.html
+++ b/contact/index.html
@@ -57,8 +57,8 @@
 <link rel="shortcut icon" href="https://aliceleon.org/%20/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://aliceleon.org/%20/img/favicon.ico" type="image/x-icon">
 
-<link href="/contact/index.xml" rel="alternate" type="application/rss+xml" title="Yuqing&#39;s Portfolio" />
-<link href="/contact/index.xml" rel="feed" type="application/rss+xml" title="Yuqing&#39;s Portfolio" />
+<link href="/contact/" rel="alternate" type="application/rss+xml" title="Yuqing&#39;s Portfolio" />
+<link href="/contact/" rel="feed" type="application/rss+xml" title="Yuqing&#39;s Portfolio" />
 
 
 
@@ -384,7 +384,7 @@
   </div>
   <script src="https://aliceleon.org/js/jquery.min.js"></script>
 <script src="https://aliceleon.org/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.org/js/production.min.js?v=1612224869"></script>
+<script src="https://aliceleon.org/js/production.min.js?v=1612235377"></script>
 
 </body>
 </html>
