--- a/index.html
+++ b/index.html
@@ -286,7 +286,7 @@
 					</div>
 					<div class='excerpt-content'>
 						<article>
-							<p>Counterproductive is a short film about the consequences of algorithmic bias in artificial intelligence. Thesis project in collaboration with <a href="http://www.interactivearchitecture.org/author/ravinraori">Ravin Raori</a> and me at <a href="http://www.interactivearchitecture.org/tag/ialab">dfpi</a>. Finally.</p>
+							<p>Counterproductive is a short film about the consequences of algorithmic bias in artificial intelligence. Thesis project in collaboration with <a href="http://www.interactivearchitecture.org/author/ravinraori">Ravin Raori</a> at <a href="http://www.interactivearchitecture.org/tag/ialab">dfpi</a>. Finally.</p>
 
 							<div class="more-link-wrapper"><a class="more-link" href="https://aliceleon.org/post/conterproductive/">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div>
 						</article>
@@ -641,7 +641,7 @@ A study on using language as a way of seeing.</p>
   </div>
   <script src="https://aliceleon.org/js/jquery.min.js"></script>
 <script src="https://aliceleon.org/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.org/js/production.min.js?v=1612312656"></script>
+<script src="https://aliceleon.org/js/production.min.js?v=1612312887"></script>
 
 </body>
 </html>
