--- a/about/index.html
+++ b/about/index.html
@@ -13,7 +13,7 @@
         "articleSection" : "",
         "name" : "About me",
         "headline" : "About me",
-        "description" : "Yuqing Liu, Designer \x26amp; developer based in London. Always interested in learning new things.\n MArch UCL,Interactive Architecture Lab 2019.9-2021.1 BC Digital Media Arts at CUC 2014.9 - 2018.6  Download my CV ",
+        "description" : "Yuqing Liu, Designer \x26amp; developer based in London. Always interested in learning new things.\n MArch UCL,Interactive Architecture Lab 2019.9-2021.1 BA Digital Media Arts at CUC 2014.9 - 2018.6  Download my CV ",
         "inLanguage" : "en",
         "author" : "",
         "creator" : "",
@@ -275,7 +275,7 @@
               <p>Yuqing Liu, Designer &amp; developer based in London. Always interested in learning new things.</p>
 <ul>
 <li>MArch UCL,<a href="http://www.interactivearchitecture.org/">Interactive Architecture Lab</a> 2019.9-2021.1</li>
-<li>BC Digital Media Arts at CUC 2014.9 - 2018.6</li>
+<li>BA Digital Media Arts at CUC 2014.9 - 2018.6</li>
 </ul>
 <p>Download my 
 <a href="download/Yuqing_Liu_CV_2020.pdf" download="Yuqing_Liu_CV_2020">CV</a>
@@ -414,7 +414,7 @@
   </div>
   <script src="https://aliceleon.org/js/jquery.min.js"></script>
 <script src="https://aliceleon.org/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.org/js/production.min.js?v=1612341859"></script>
+<script src="https://aliceleon.org/js/production.min.js?v=1612349627"></script>
 
 </body>
 </html>
