--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
         "@type" : "BlogPosting",
         "mainEntityOfPage": {
              "@type": "WebPage",
-             "@id": "http:\/\/yuqing.live"
+             "@id": "http:\/\/yuqing.live\/"
         },
         "articleSection" : "",
         "name" : "About me",
@@ -25,7 +25,7 @@
         "dateModified" : "2019-03-20 15:32:00 \x2b0800 \x2b0800",
         "url" : "http:\/\/yuqing.live\/about\/",
         "wordCount" : "31",
-        "image" : "http://yuqing.live%!s(\u003cnil\u003e)"",
+        "image" : "http://yuqing.live/%!s(\u003cnil\u003e)"",
         "keywords" : [ "Blog" ]   
     }
     </script>
@@ -53,8 +53,8 @@
 
 
 
-<link href="http://yuqing.livecss/style.css" rel="stylesheet">
-<link href="http://yuqing.livecss/custom.css" rel="stylesheet">
+<link href="http://yuqing.live/css/style.css" rel="stylesheet">
+<link href="http://yuqing.live/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="http://yuqing.live/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="http://yuqing.live/img/favicon.ico" type="image/x-icon">
 
@@ -230,7 +230,7 @@
           <span class="date">20 March</span>	<span> / </span>
 
           <span class="author">
-            <a href="http://yuqing.live" title="Posts by " rel="author"></a>
+            <a href="http://yuqing.live/" title="Posts by " rel="author"></a>
           </span>
 
 
@@ -386,7 +386,7 @@
   </div>
   <script src="http://yuqing.live/js/jquery.min.js"></script>
 <script src="http://yuqing.live/js/jquerymigrate.js"></script>
-<script src="http://yuqing.live/js/production.min.js?v=1612441527"></script>
+<script src="http://yuqing.live/js/production.min.js?v=1612441621"></script>
 
 </body>
 </html>
