--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         "@type" : "BlogPosting",
         "mainEntityOfPage": {
              "@type": "WebPage",
-             "@id": "http:\/\/yuqing.live"
+             "@id": "http:\/\/yuqing.live\/"
         },
         "articleSection" : "",
         "name" : "Yuqing\x27s Portfolio",
@@ -26,7 +26,7 @@
         "dateModified" : "2019-03-20 15:32:00 \x2b0800 \x2b0800",
         "url" : "http:\/\/yuqing.live\/",
         "wordCount" : "0",
-        "image" : "http://yuqing.live%!s(\u003cnil\u003e)"",
+        "image" : "http://yuqing.live/%!s(\u003cnil\u003e)"",
         "keywords" : [ "Blog" ]   
     }
     </script>
@@ -54,8 +54,8 @@
 
 
 
-<link href="http://yuqing.livecss/style.css" rel="stylesheet">
-<link href="http://yuqing.livecss/custom.css" rel="stylesheet">
+<link href="http://yuqing.live/css/style.css" rel="stylesheet">
+<link href="http://yuqing.live/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="http://yuqing.live/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="http://yuqing.live/img/favicon.ico" type="image/x-icon">
 
@@ -600,7 +600,7 @@ A study on using language as a way of seeing.</p>
   </div>
   <script src="http://yuqing.live/js/jquery.min.js"></script>
 <script src="http://yuqing.live/js/jquerymigrate.js"></script>
-<script src="http://yuqing.live/js/production.min.js?v=1612441527"></script>
+<script src="http://yuqing.live/js/production.min.js?v=1612441621"></script>
 
 </body>
 </html>
