--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@ A study on using language as a way of seeing.</p>
 			
 
 				
-				<a class="featured-image-link" href="https://yuqing.live/post/spiderman/"><div class='featured-image lazy lazy-bg-image' data-background="https://yuqing.live/img/spiderman.jpg"></div></a>
+				<a class="featured-image-link" href="https://yuqing.live/post/spiderman-an-entangling-trio/"><div class='featured-image lazy lazy-bg-image' data-background="https://yuqing.live/img/spiderman.png"></div></a>
 
 				
 				<div class="excerpt-container">
@@ -422,14 +422,14 @@ A study on using language as a way of seeing.</p>
 					</div>
 					<div class='excerpt-header'>
 						<h2 class='excerpt-title'>
-							<a href="https://yuqing.live/post/spiderman/ "> Spiderman </a>
+							<a href="https://yuqing.live/post/spiderman-an-entangling-trio/ "> Spiderman - An Entangling Trio </a>
 						</h2>
 					</div>
 					<div class='excerpt-content'>
 						<article>
 							<p>An exploration of VR space and tangible space through dancing performance.</p>
 
-							<div class="more-link-wrapper"><a class="more-link" href="https://yuqing.live/post/spiderman/">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div>
+							<div class="more-link-wrapper"><a class="more-link" href="https://yuqing.live/post/spiderman-an-entangling-trio/">Read the post<span class="screen-reader-text">This is a Standard Post</span></a></div>
 						</article>
 					</div>
 				</div>
@@ -600,7 +600,7 @@ A study on using language as a way of seeing.</p>
   </div>
   <script src="https://yuqing.live/js/jquery.min.js"></script>
 <script src="https://yuqing.live/js/jquerymigrate.js"></script>
-<script src="https://yuqing.live/js/production.min.js?v=1612441860"></script>
+<script src="https://yuqing.live/js/production.min.js?v=1612444147"></script>
 
 </body>
 </html>
