--- a/about/index.html
+++ b/about/index.html
@@ -8,7 +8,7 @@
         "@type" : "BlogPosting",
         "mainEntityOfPage": {
              "@type": "WebPage",
-             "@id": "https:\/\/aliceleon.org"
+             "@id": "https:\/\/aliceleon.org\/"
         },
         "articleSection" : "",
         "name" : "About me",
@@ -25,7 +25,7 @@
         "dateModified" : "2019-03-20 15:32:00 \x2b0800 \x2b0800",
         "url" : "https:\/\/aliceleon.org\/about\/",
         "wordCount" : "31",
-        "image" : "https://aliceleon.org%!s(\u003cnil\u003e)"",
+        "image" : "https://aliceleon.org/%!s(\u003cnil\u003e)"",
         "keywords" : [ "Blog" ]   
     }
     </script>
@@ -53,8 +53,8 @@
 
 
 
-<link href="https://aliceleon.orgcss/style.css" rel="stylesheet">
-<link href="https://aliceleon.orgcss/custom.css" rel="stylesheet">
+<link href="https://aliceleon.org/css/style.css" rel="stylesheet">
+<link href="https://aliceleon.org/css/custom.css" rel="stylesheet">
 <link rel="shortcut icon" href="https://aliceleon.org/img/favicon.ico" type="image/x-icon">
 <link rel="icon" href="https://aliceleon.org/img/favicon.ico" type="image/x-icon">
 
@@ -230,7 +230,7 @@
           <span class="date">20 March</span>	<span> / </span>
 
           <span class="author">
-            <a href="https://aliceleon.org" title="Posts by " rel="author"></a>
+            <a href="https://aliceleon.org/" title="Posts by " rel="author"></a>
           </span>
 
 
@@ -386,7 +386,7 @@
   </div>
   <script src="https://aliceleon.org/js/jquery.min.js"></script>
 <script src="https://aliceleon.org/js/jquerymigrate.js"></script>
-<script src="https://aliceleon.org/js/production.min.js?v=1612745155"></script>
+<script src="https://aliceleon.org/js/production.min.js?v=1612745262"></script>
 
 </body>
 </html>
